# ncu-tlk

./: .gitignore  README.md  manage.py  pyproject.toml  專案報告.docx
chatroom/: admin.py  consumers.py  forms.py  models.py  routing.py  urls.py  views.py
chatroom/migrations/: 0001_initial.py  0002_chatroom_is_anonymous.py  0003_alter_chatroom_is_anonymous_alter_chatroom_summary.py  0004_message_createc_by.py  0005_alter_chatroom_is_anonymous.py
chatroom/static/css/: styles.css
chatroom/templates/: base.html  create.html  index.html  show.html  update.html
chatroom/templates/chatroom/: chatroom_detail.html  chatroom_list.html  chatroom_mine.html
ncu_provider/: provider.py  urls.py  views.py
ncu_tlk/: asgi.py  settings.py  urls.py  wsgi.py
templates/allauth/account/: base.html  login.html  signup.html
templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
